# Course_Work_3

./: README.md  pyproject.toml
course_work_3/: main.py  operation.py  utils.py
tests/: test_operation.py  test_utils.py
